<resources>
    <string name="app_name">MessagingApplication</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_login">Login</string>
    <string name="prompt_username">User Name</string>
    <string name="button_new_user">New User</string>
    <string name="button_forgot_password">Forgot Password</string>
    <string name="button_forgot_username">Forgot Username</string>
    <string name="messaging_application">Messaging Application</string>
    <string name="button_Groups">Groups</string>
    <string name="button_Personal">Personal</string>
    <string name="GroupText">Groups</string>
    <string name="buttonGroups">New Group</string>
    <string name="PersonalText">Personal</string>
    <string name="newMessageButton">New Message</string>
    <string name="textUserName">User Name</string>
    <string name="textWelcomeMessage">Wecome!</string>
    <string name="editTextEmailAddress">Email Address</string>
    <string name="editTextUserName">User Name</string>
    <string name="editTextEmailAddress1">Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="passwordVerification">Password</string>
    <string name="first_name">First Name</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="create_account">Create Account</string>
    <string name="user_profile">User Profile</string>
    <string name="app_settings">App Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile">Profile</string>
    <string name="change_picture">Change Picture</string>
    <string name="name_first_name">Name: First Name</string>
    <string name="birth_day_month_day_year">Birth Day: Month/Day/Year</string>
    <string name="email_address_name_gmail_com">Email Address: name@gmail.com</string>
    <string name="phone_number_area_code_555_5555">Phone Number: (Area Code)555-5555</string>
    <string name="user_name_user_name">User Name: User Name</string>
    <string name="passwordText">Password: *********</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="new_group">New Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_type">Group Type</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="name">Name</string>
    <string name="create_group">Create Group</string>
    <string name="search">Search</string>
    <string name="new_contact">New Contact</string>
    <string name="relationship">Relationship</string>
    <string name="add_picture">Add Picture</string>
    <string name="add_contact">Add Contact</string>
    <color name="blue">#A9C7C5</color>
    <color name="textGreen">#68A8AC</color>
    <color name="buttonRed">#D1ACA5</color>
</resources>