<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <Button
        android:id="@+id/buttonForgotUsername"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="111dp"
        android:backgroundTint="@color/white"
        android:text="@string/button_forgot_username"
        android:textColor="@color/textGreen"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewUser" />

    <TextView
        android:id="@+id/MessagingAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="30dp"
        android:text="@string/messaging_application"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textGreen"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="204dp"
        android:layout_height="0dp"
        android:layout_marginBottom="38dp"
        android:hint="@string/prompt_username"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_userName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_userName"
        app:layout_constraintEnd_toEndOf="@+id/editText_userName"
        app:layout_constraintTop_toBottomOf="@+id/MessagingAppText"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="107dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/buttonRed"
        android:text="@string/button_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/buttonNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonRed"
        android:text="@string/button_new_user"
        app:layout_constraintBottom_toTopOf="@+id/buttonForgotUsername"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/white"
        android:text="@string/button_forgot_password"
        android:textColor="@color/textGreen"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonForgotUsername"
        app:layout_constraintEnd_toStartOf="@+id/buttonForgotUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonForgotUsername" />


</androidx.constraintlayout.widget.ConstraintLayout>