<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:backgroundTint="#A8C6C4">

    <TextView
        android:id="@+id/textViewNewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_group"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textGreen"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCreateGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateGroup" />

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/group_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textViewNewGroup"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewGroup" />

    <EditText
        android:id="@+id/editTextGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/group_type"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextGroupName"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroupName" />

    <TextView
        android:id="@+id/textViewAddContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="17dp"
        android:text="@string/add_contacts"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textGreen"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="@+id/editTextGroupType"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroupType" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddContacts" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ImageButton
        android:id="@+id/imageViewSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#A7C5C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scrollView4"
        app:srcCompat="@drawable/account_1_" />

    <Button
        android:id="@+id/buttonChangePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/buttonRed"
        android:text="@string/change_picture"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

    <ImageButton
        android:id="@+id/imageButtonBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#A7C5C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/angle_left" />

    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonRed"
        android:text="@string/create_group"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>